# TrainInvaders

./: .flake8  .gitignore  Dockerfile  Dockerfile.game  Dockerfile.view  Dockerfile.view.dockerignore  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: bump-version.yml  release.yml
src/game/resource/: convert.py  packfont.py
src/game/src/: main.c  sprites.h
src/game/src/logic/: game.c  game.h  game_alien.c  game_alien.h  game_bullet.c  game_bullet.h  game_object.c  game_object.h  game_player.c  game_player.h  game_powerup.c  game_powerup.h  game_title.c  game_title.h
src/game/src/system/: system.c  system.h  system_base.c  system_base.h  system_input.c  system_input.h  system_video.c  system_video.h
src/train_invaders/: index.html  index.js  start.py  stop.py  styles.css  view.js  view.txt
src/view/: README.md  package-lock.json  package.json  vue.config.js
src/view/public/: index.html
src/view/src/: App.vue  main.js  styles.css
src/view/src/assets/: game.txt
src/view/src/components/: CloseButton.vue  Leaderboard.vue  LeaderboardRow.vue  Spinner.vue
