[tool.poetry]
name = "train_invaders"
version = "v1.0.3"
description = "Jupyter Notebook + Space Invaders!?"
authors = ["Aporia"]
readme = "README.md"
repository = "https://github.com/aporia-ai/TrainInvaders"
classifiers = [
    "Framework :: Jupyter",
    "Topic :: Games/Entertainment :: Arcade",
    "Programming Language :: JavaScript",
]

[tool.poetry.dependencies]
python = "^3.6"
ipython = "<=7.16"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"
flake8-black = "^0.1.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.2"
flake8-bandit = "^2.1.2"
mypy = "^0.761"
flake8-annotations = "^2.0.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.1.2"
isort = "^5.7.0"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
lexicographical = true
order_by_type = false
group_by_package = true
no_lines_before = ['LOCALFOLDER']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
